# nextjs-application-starter

.next/: app-build-manifest.json  trace
.next/static/chunks/: [root-of-the-server]__9a168d68._.css  [root-of-the-server]__9a168d68._.css.map  node_modules_cb92c6ef._.js  node_modules_cb92c6ef._.js.map  node_modules_db43f92f._.js  node_modules_db43f92f._.js.map  src_52e6d779._.js  src_52e6d779._.js.map  src_99bea0c7._.js  src_99bea0c7._.js.map  src_app_page_tsx_a993527f._.js
CodeCraft/: .replit  app.py  config.json  encryption.key  enterprise_app.py  pyproject.toml  replit.md  run_enterprise.py
CodeCraft/attached_assets/: Pasted-import-sys-sys-setrecursionlimit-1500-Increase-recursion-limit-as-a-fallback-import-platform--1753148433243_1753148433244.txt
CodeCraft/config/: default_config.json
CodeCraft/enterprise/: ai_engine.py  compliance_engine.py  database_models.py  integrations.py
CodeCraft/logs/: alerts.json
CodeCraft/monitoring/: file_monitor.py  network_monitor.py  system_monitor.py  threat_intel.py
CodeCraft/static/css/: style.css
CodeCraft/static/js/: main.js
CodeCraft/templates/: enterprise_dashboard.html  index.html
CodeCraft/utils/: email_notifier.py  encryption.py  logger.py
